--- a/src/components/navbar/index.css
+++ b/src/components/navbar/index.css
@@ -14,6 +14,6 @@
     font-family: 'Titillium Web', sans-serif;
     position: absolute;
     left: 100px;
-    font-size: -webkit-xxx-large;
+    font-size: -webkit-large;
     top: 8px;
 }
